--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vanilla Weather App</title>
   </head>
   <body>
     <h1>Welcome to my weather app</h1>
-    <footer>coded by Karera Sonia Anika</footer>
+    <footer>
+      Coded by<a href="https://github.com/AnikaSonia" target="_blank">
+        Karera Sonia Anika</a
+      >, code hosted on
+      <a href="https://github.com/AnikaSonia/final-weather-app" target="_blank"
+        >Github</a
+      >
+      and website is hosted on
+      <a href="https://myweatherappproject7.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
