--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <footer>
       Coded by<a href="https://github.com/AnikaSonia" target="_blank">
         Karera Sonia Anika</a
-      >, code hosted on
+      >, open sourced on
       <a href="https://github.com/AnikaSonia/final-weather-app" target="_blank"
         >Github</a
       >
-      and website is hosted on
+      and is hosted on
       <a href="https://myweatherappproject7.netlify.app/" target="_blank"
         >Netlify</a
       >
