--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Vanilla Weather App</title>
   </head>
   <body>
+    <header>
+      <form>
+        <input type="search" placeholder = "Enter a city" required/>
+        <input type="submit" value="search"/>
+      </form>
+    </header>
     <h1>Welcome to my weather app</h1>
     <footer>
       Coded by<a href="https://github.com/AnikaSonia" target="_blank">
