Sample weather data

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <input type="submit" value="search"/>
       </form>
     </header>
-    <h1>Welcome to my weather app</h1>
+    <div></div>
+    <h1>31 degrees</h1>
+    <h2> Emoji </h2></div>
+    <div>
+    Wind Speed is 
+    Humidity is
+    </div>
     <footer>
       Coded by<a href="https://github.com/AnikaSonia" target="_blank">
         Karera Sonia Anika</a
