--- a/index.html
+++ b/index.html
@@ -3,33 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/index.css" />
     <title>Vanilla Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder = "Enter a city" required/>
-        <input type="submit" value="search"/>
-      </form>
-    </header>
-    <div></div>
-    <h1>31 degrees</h1>
-    <h2> Emoji </h2></div>
-    <div>
-    Wind Speed is 
-    Humidity is
+    <div class="title">
+      <h1>CloudCast</h1>
+      <span>Your reliable weather companion</span>
     </div>
-    <footer>
-      Coded by<a href="https://github.com/AnikaSonia" target="_blank">
-        Karera Sonia Anika</a
-      >, open sourced on
-      <a href="https://github.com/AnikaSonia/final-weather-app" target="_blank"
-        >Github</a
-      >
-      and is hosted on
-      <a href="https://myweatherappproject7.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <div>
+        <h1>31 degrees</h1>
+        <h2>Emoji</h2>
+      </div>
+      <div>
+        Wind Speed is
+        <br />
+        Humidity is
+      </div>
+      <div>Tomorrow forecast</div>
+      <div>Day after forecast</div>
+      <div>Third day forecast</div>
+      <footer>
+        Coded by<a href="https://github.com/AnikaSonia" target="_blank">
+          Karera Sonia Anika</a
+        >, open sourced on
+        <a
+          href="https://github.com/AnikaSonia/final-weather-app"
+          target="_blank"
+          >Github</a
+        >
+        and is hosted on
+        <a href="https://myweatherappproject7.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
