--- a/index.html
+++ b/index.html
@@ -19,20 +19,29 @@
     </div>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city" required />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input type="search" placeholder="Enter a city" required class="search-form-input" />
+          <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
+       <main>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Kigali</h1>
+            <p class="weather-app-details">
+              Tuesday 14:49 - Scattered clouds
+              <br />
+              Humidity: <span class="secondary-data">66%</span>, Wind: <span class="secondary-data">3.13km/h</span>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">🌤️</div>
+            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
+        </div>
+      </main>
       <div>
-        <h1>31 degrees</h1>
-        <h2>Emoji</h2>
-      </div>
-      <div>
-        Wind Speed is
-        <br />
-        Humidity is
-      </div>
       <div>Tomorrow forecast</div>
       <div>Day after forecast</div>
       <div>Third day forecast</div>
