--- a/index.html
+++ b/index.html
@@ -10,36 +10,32 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/index.css" />
-    <title>Vanilla Weather App</title>
+    <title>CloudCast Weather App</title>
   </head>
   <body>
-    <div class="title">
-      <h1>CloudCast</h1>
-      <span>Your reliable weather companion</span>
-    </div>
-    <div class="weather-app">
-      <header>
-        <form class="search-form">
+           <h1 class="weather-app-name">CloudCast</h1>
+       <p class="weather-app-tagline">Your reliable weather companion!</p>
+      <div class="weather-app">
+       <main>
+        <header>
+         <form class="search-form">
           <input type="search" placeholder="Enter a city" required class="search-form-input" />
           <input type="submit" value="search" class="search-form-button" />
-        </form>
-      </header>
-       <main>
+        </form></header>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Kigali</h1>
-            <p class="weather-app-details">
+            <div class="weather-app-city">Kigali</div>
+            <span class="weather-app-details">
               Tuesday 14:49 - Scattered clouds
               <br />
               Humidity: <span class="secondary-data">66%</span>, Wind: <span class="secondary-data">3.13km/h</span>
-            </p>
+            </span>
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤️</div>
             <div class="weather-app-temperature">12</div>
             <div class="weather-app-unit">°C</div>
           </div>
-        </div>
       </main>
       <div>
       <div>Tomorrow forecast</div>
