Added axios to html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=>, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,52 +10,58 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>CloudCast Weather App</title>
   </head>
   <body>
-           <h1 class="weather-app-name">CloudCast</h1>
-       <p class="weather-app-tagline">Your reliable weather companion!</p>
-        <div class="weather-app">
-        <header>
-         <form class="search-form" id="search-form">
-          <input type="search" placeholder="Enter a city" required class="search-form-input" />
+    <h1 class="weather-app-name">CloudCast</h1>
+    <p class="weather-app-tagline">Your reliable weather companion!</p>
+    <div class="weather-app">
+      <header>
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city"
+            required
+            class="search-form-input"
+            id="search-form-input"
+          />
           <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
       <main>
         <div class="weather-app-data">
           <div>
-            <div class="weather-app-city">Kigali</div>
+            <div class="weather-app-city" id="city">Kigali</div>
             <span class="weather-app-details">
               Tuesday 14:49 - Scattered clouds
               <br />
-              Humidity: <span class="secondary-data">66%</span>, Wind: <span class="secondary-data">3.13km/h</span>
+              Humidity: <span class="secondary-data">66%</span>, Wind:
+              <span class="secondary-data">3.13km/h</span>
             </span>
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤️</div>
             <div class="weather-app-temperature">12</div>
             <div class="weather-app-unit">°C</div>
-             </div>
+          </div>
+        </div>
       </main>
-      <div>Tomorrow forecast</div>
-      <div>Day after forecast</div>
-      <div>Third day forecast</div>
       <footer>
-        Coded by<a href="https://github.com/AnikaSonia" target="_blank">
-          Karera Sonia Anika</a
+        Coded by
+        <a href="https://github.com/AnikaSonia" target="_blank"
+          >Karera Sonia Anika</a
         >, open sourced on
         <a
           href="https://github.com/AnikaSonia/final-weather-app"
           target="_blank"
           >Github</a
-        >
-        and is hosted on
+        >, and is hosted on
         <a href="https://myweatherappproject7.netlify.app/" target="_blank"
           >Netlify</a
         >
       </footer>
     </div>
-    <script scr="src/index.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
