--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <div class="weather-app-city" id="city">Kigali</div>
+            <div class="weather-app-city" id="city"></div>
             <span class="weather-app-details">
               Tuesday 14:49 - Scattered clouds
               <br />
@@ -42,7 +42,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤️</div>
-            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-temperature" id="weather-app-temp"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
