--- a/index.html
+++ b/index.html
@@ -6,62 +6,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/index.css" />
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <title>CloudCast Weather App</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <title>CloudCast App</title>
   </head>
   <body>
-    <h1 class="weather-app-name">CloudCast</h1>
-    <p class="weather-app-tagline">Your reliable weather companion!</p>
     <div class="weather-app">
       <header>
         <form class="search-form" id="search-form">
           <input
             type="search"
-            placeholder="Enter a city"
+            placeholder="Enter a city.."
             required
-            class="search-form-input"
             id="search-form-input"
+            class="search-form-input"
           />
-          <input type="submit" value="search" class="search-form-button" />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
         <div class="weather-app-data">
           <div>
-            <div class="weather-app-city" id="city"></div>
-            <span class="weather-app-details">
-              Tuesday 14:49 - Scattered clouds
+            <h1 class="weather-app-city" id="city"></h1>
+            <p class="weather-app-details">
+              <span id="time"></span>,
+              <span id="description"></span>
               <br />
-              Humidity: <span class="secondary-data">66%</span>, Wind:
-              <span class="secondary-data">3.13km/h</span>
-            </span>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
+            </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤️</div>
-            <div class="weather-app-temperature" id="weather-app-temp"></div>
-            <div class="weather-app-unit">°C</div>
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weatehr-app-unit">°C</div>
           </div>
         </div>
       </main>
       <footer>
-        Coded by
-        <a href="https://github.com/AnikaSonia" target="_blank"
-          >Karera Sonia Anika</a
-        >, open sourced on
+        This project was coded by
+        <a href="https://github.com/AnikaSonia" target="_blank">
+          Karera Sonia Anika</a
+        >, is
         <a
           href="https://github.com/AnikaSonia/final-weather-app"
           target="_blank"
-          >Github</a
-        >, and is hosted on
+          >open-sourced on GitHub</a
+        >
+        and
         <a href="https://myweatherappproject7.netlify.app/" target="_blank"
-          >Netlify</a
+          >hosted on Netlify</a
         >
       </footer>
     </div>
+    <button class="press">Change Theme</button>
     <script src="src/app.js"></script>
   </body>
 </html>
